--- a/index.html
+++ b/index.html
@@ -8,10 +8,22 @@
 <body>
 	<header>
 		<h1>Menu</h1>
-	
+		
 	</header>
 
-	<section>
+	<section class="grid-container">
+		<div class="menu-item">
+			<img src="i1.jpg" alt="Menu Item">
+		</div>
+
+		<div class="menu-item">
+			<img src="i2.jpg" alt="Menu Item">
+		</div>
+
+		<div class="menu-item">
+			<img src="i3.jpg" alt="Menu Item">
+		</div>
+
 		<div class="menu-item">
 			<img src="i1.jpg" alt="Menu Item">
 		</div>
@@ -28,5 +40,7 @@
 	<footer>
 		<p>&copy; 2023 Menu. All Rights Reserved.</p>
 	</footer>
+
+	<script src="script.js"></script>
 </body>
 </html>
